fix(frontend): fix spacing on feed item

--- a/frontend/src/css/FeedItemWithPreview.styl
+++ b/frontend/src/css/FeedItemWithPreview.styl
@@ -26,9 +26,12 @@ smallScreenFeedWidth = 400px
       margin standardSpacing 0 0
     &__messagelist
       padding 0
+    &__comment.sent
+      margin-inline-end standardSpacing
   &__publication
     &__messagelist__item
       margin-bottom 0
+      padding-inline-end standardSpacing
     &.comment
       border 0
       &.sent, &.received
